--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "bayze-gems-api": "^0.1.15"
+    "bayze-gems-api": "latest"
   },
   "scripts": {
     "tsc": "tsc --build --verbose",
